# spatialMOS

./: .editorconfig  .gitignore  .pylintrc  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  run_get_data.py  run_script.py  setup.cfg  task.py
deploy/: crontab.moses.tirol
django/: Dockerfile  gunicorn_config.py  manage.py  pages.json  requirements.txt
fabric/: inv_base.py  inv_deploy.py  inv_django.py  inv_docker.py  inv_install.py  inv_logging.py  inv_node.py  inv_postgres.py  inv_rsync.py  inv_spatialmos.py  inv_test.py  logging.cfg  settings.example.json  util.py
processing/: crontab.moses.tirol  spatialmos__py_archive_get_available_data__gefs.sh  spatialmos__py_archive_get_available_data__uibk.sh  spatialmos__py_archive_get_available_data__zamg.sh  spatialmos__py_get_available_data__gefs__rh2m.sh  spatialmos__py_get_available_data__gefs__tmp2m.sh  spatialmos__py_get_available_data__gefs__ugrd_10m.sh  spatialmos__py_get_available_data__gefs__vgrd_10m.sh  spatialmos__py_get_available_data__uibk.sh  spatialmos__py_get_available_data__zamg.sh
py_get_available_data/: archiv_available_data.py  archive_available_data.py  gefs.py  suedtirol.py  uibk.py  wetter_at.py  zamg.py
py_middleware/: __init__.py
py_spatialmos/: archive_available_data.py  archive_folder.py  combine_climatology.py  combine_data.py  combine_gamlss_climatology.py  combine_measurements.py  combine_predictions.py  get_gefs_forcasts.py  get_gefs_forecasts.py  get_lwd_data.py  get_suedtirol_data.py  (+20 more)
(+274 files in other folders)
