[package]
name = "spatial-rust-util"
version = "0.1.1"
authors = ["Daniel Naschberger <daniel@naschi.at>"]
edition = "2018"

[lib]
name = "spatial_rust_util"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.19"
libmath = "0.2.1"

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]
